feat(styling): Styling the product webpage with CSS

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Furniture Emporium</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <main>
@@ -12,7 +13,7 @@
           bring home.
         </p>
       </header>
-      <article>
+      <article class="product">
         <h2>Ergonomic Couch</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
@@ -20,10 +21,10 @@
           possimus repellendus quisquam minus sapiente aut suscipit fugit quia
           debitis totam et incidunt!
         </p>
-        <p>$20.00 <s>$25.00</s></p>
+        <p class="sale-price">$20.00 <s>$25.00</s></p>
         <button>Add to cart</button>
       </article>
-      <article>
+      <article class="product">
         <h2>Frozen Table</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
@@ -31,10 +32,10 @@
           possimus repellendus quisquam minus sapiente aut suscipit fugit quia
           debitis totam et incidunt!
         </p>
-        <p>$49.95 <s>$60.00</s></p>
+        <p class="sale-price">$49.95 <s>$60.00</s></p>
         <button>Add to cart</button>
       </article>
-      <article>
+      <article class="product">
         <h2>Handcrafted Chair</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
@@ -42,7 +43,7 @@
           possimus repellendus quisquam minus sapiente aut suscipit fugit quia
           debitis totam et incidunt!
         </p>
-        <p>$18.99 <s>$32.99</s></p>
+        <p class="sale-price">$18.99 <s>$32.99</s></p>
         <button>Add to cart</button>
       </article>
     </main>
