feat(style): Consistant webpage theme

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           possimus repellendus quisquam minus sapiente aut suscipit fugit quia
           debitis totam et incidunt!
         </p>
-        <p class="sale-price">$20.00 <s>$25.00</s></p>
+        <p class="price">$20.00 <s>$25.00</s></p>
         <button>Add to cart</button>
       </article>
       <article class="product">
@@ -32,7 +32,7 @@
           possimus repellendus quisquam minus sapiente aut suscipit fugit quia
           debitis totam et incidunt!
         </p>
-        <p class="sale-price">$49.95 <s>$60.00</s></p>
+        <p class="price">$49.95 <s>$60.00</s></p>
         <button>Add to cart</button>
       </article>
       <article class="product">
@@ -43,7 +43,7 @@
           possimus repellendus quisquam minus sapiente aut suscipit fugit quia
           debitis totam et incidunt!
         </p>
-        <p class="sale-price">$18.99 <s>$32.99</s></p>
+        <p class="price">$18.99 <s>$32.99</s></p>
         <button>Add to cart</button>
       </article>
     </main>
